custom.css
/* ... */
/* tooltip */
/* #7289da */
.tooltip {
	background-color: #B42926;
}
.tooltip.tooltip-right::after {
	border-right-color: #B42926;
}
.tooltip.tooltip-bottom::after {
	border-bottom-color: #B42926;
}
.tooltip.tooltip-left::after {
	border-left-color: #B42926;
}
.tooltip.tooltip-top::after {
	border-top-color: #B42926;
}

/* loading-spinner? */
/*.spinner-chasing-dots .spinner-item {
	background-color: #B42926;
}
.spinner-wandering-cubes .spinner-item {
	background-color: #B42926;
}*/

/* typing status */
/* #36393e */
.theme-dark .chat form .typing {
	background-color: rgba(54, 57, 62, .0);
}




/* background image test */
/* TODO: using backgrounds from momentum */
/* 	instead used random backgrounds from unsplash */
/* TODO: reload background button (::before:active) */
/* TODO: reload every x interval (animation: quickly increase size after x interval) */
/* TODO: fade-change; */

/*.app {
	background-color: #679FAE;
	background-image: url("https://imgur.com/RG03PyX.png") !important;
	background-size: cover !important;
	-webkit-transition: all .5s;
}*/

/* random image of size 1349x591.. probably get a better size.. */
/* above image is used while this one loads */

.app > .flex-vertical {
	background-image: url("https://unsplash.it/1680/1050/?random") !important;
	background-size: cover !important;
	-webkit-transition: all .5s;
	background-color: rgba(54, 57, 62, .7);
}
/*background if unsplash doesn't load*/
.app, .app::after{
	/*background-image: url("https://unsplash.it/1680/1050/?random");*/
	background-image: url("https://imgur.com/RG03PyX.png");
	/*-webkit-animation: opacityBg 20s ease-in-out infinite;*/
	background-size: cover !important;
	/* animations are very CPU intensive. possible fix? */
	/* http://stackoverflow.com/questions/13176746/css-keyframe-animation-cpu-usage-is-high-should-it-be-this-way */
	-webkit-transform: translateZ(0);
}
/*channel topic modal background*/
.callout-backdrop {
	background-image: url("https://unsplash.it/1680/1050/?random") !important;
	background-size: cover !important;
	-webkit-transform: translateZ(0);
}
/*channel topic modal*/
.markdown-modal {
	/*-webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, .2);;
	box-shadow: 0 2px 4px rgba(0, 0, 0, .2);;*/
}

/*.app::after {
	opacity: 0;
	position: absolute;
	top:0;
	left:0;
	width:100%;
	height:100%;
	content:"";
	-webkit-animation-delay: 10s;
	background-image: url("https://unsplash.it/1680/1050/?random");

}*/



/*
   replaces chat background
   so that channel:hover is seamless
*/
.flex-horizontal {
	background-color: rgba(54, 57, 62, .7);
}

/* server-bar */
/* #1e2124 */
.guilds-wrapper {
	/*background: rgba(30, 33, 36, .85);*/
	background: rgba(30, 33, 36, .6);

}

/* channel-bar */
/* v1: rgba(28, 30, 34, .0) */
.channels-wrap {
	background: rgba(28, 30, 34, .0);
	background-position: 0px 0px;
}
.channels-wrap:hover {
	background: rgba(28, 30, 34, .0);
	/*background-image: url("https://imgur.com/RG03PyX.png");
	background-position: 100px 0px;*/
}
/* #2e3136 */
.guild-channels, .private-channels {
	/*background: rgba(46, 49, 54, .8);*/
	background: rgba(46, 49, 54, .35);
}
.guild-channels:hover, .private-channels:hover {
	background: rgba(46, 49, 54, .7);
}
/* #2e3136 */
.guild-header header, .search-bar{
	/*background: rgba(46, 49, 54, .9);*/
	background: rgba(46, 49, 54, .6);
}
.search-bar {
	background: rgba(46, 49, 54, .5);
}
.guild-channels-wrapper:hover .guild-header header,
.private-channels:hover .search-bar {
	background: rgba(46, 49, 54, .7);
}
/* -- #282b30 */
.guild-channels-wrapper:hover .guild-header header:hover,
.guild-header.popout-open header,
.private-channels:hover .search-bar:hover {
	background: rgba(40, 43, 48, .9);
}
.private-channels:hover .search-bar,
.private-channels:hover .search-bar:hover {
	transition: background-color .15s ease;
}
/* -webkit-linear-gradient(left,#282b30 85%,#2e3136) */
/* linear-gradient(to right,#282b30 85%,#2e3136) */
.guild-channels .channel-text.selected {
	background: -webkit-linear-gradient(left, rgba(46, 49, 54, 0.7), rgba(46, 49, 54, 0.95), rgba(46, 49, 54, 0.98), rgba(46, 49, 54, 1.0));
}
/* #282b30 */
.channels-wrap .account {
	/*background: rgba(40, 43, 48, .7);*/
	background: rgba(40, 43, 48, .4);
}
.channels-wrap:hover .account {
	background: rgba(40, 43, 48, .6);
	background: linear-gradient(right, rgba(40, 43, 48, .0) 85%, rgba(46, 49, 54, 1.0));
}

/* title */
/* #36393e */
.theme-dark .chat .title-wrap {
	z-index: 1;
	/* -webkit-backdrop-filter: blur(1px) //when :'( */
	background-color: rgba(54, 57, 62, .7);
}
.theme-dark .chat .title-wrap::before {
	content: " ";
	height: 56px;
	width: 150px;
	position: absolute;
	top: 0;
	left: -150px;
	background-color: rgba(54, 57, 62, .7);
}
/* why no work? */
.theme-dark .chat .title-wrap .title .channel-name {
	text-shadow: -1px 1px 3px rgba(26, 20, 20, .4);
}
/* chat */
/* #36393e */
.theme-dark .chat, #friends .friends-table {
	background-color: rgba(54, 57, 62, .0);
}
/* #36393e */
.theme-dark .chat>.content {
	background-color: rgba(54, 57, 62, .0);
}
/* put chat behind title */
/* TODO: cut off the scroll bar */
/* #36393e */
.theme-dark .messages-wrapper {
	margin-top: -56px;
	background-color: rgba(54, 57, 62, .0);
}
.chat .new-messages-bar {
	top: 56px;
}
/* #1e2124 */
/* #36393e :border */
.theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-thumb, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-thumb {
	background-color: rgba(30, 33, 36, .5);
	border-color: rgba(54, 57, 62, .5);
}
/* #2e3136 */
/* #36393e :border */
.theme-dark .friends-table .scroller-wrap ::-webkit-scrollbar-track-piece, .theme-dark .messages-wrapper .scroller-wrap ::-webkit-scrollbar-track-piece {
	background-color: rgba(46, 49, 54, .2);
	border-color: rgba(54, 57, 62, .2);
	margin-top: 56px;
	border-top-left-radius: 0px;
	border-top-right-radius: 0px;
}
/* ... */

